--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <div class="post_contents">
   <div class="new_container">
-    <%= form_with model: @new_post do |f| %>
+    <%= form_with(model: @post) do |f| %>
       <%= f.text_area :text, placeholder: "投稿内容を書いて" , rows: "5" %>
       <%= f.submit 'SEND', id: 'submit-btn' %>
     <% end %>
