--- a/app/views/posts/create.html.erb
+++ b/app/views/posts/create.html.erb
@@ -1,3 +1,14 @@
+<header>
+  <div class="header-logo">
+    <a href="/">WeedApp</a>
+  </div>
+  <ul class="header-menus">
+    <li>
+      <a href="/about">WeedAppとは</a>
+    </li>
+  </ul>
+</header>
+
 <div class="post_contents">
   <div class="success">
     <h3>
