--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,13 +9,23 @@
   </ul>
 </header>
 
-<div class="main posts-index">
-  <div class="container">
-    <div class="posts-index-item">
-      今日からGitで草を生やす勉強するぜー！
-    </div>
-    <div class="posts-index-item">
-      投稿一覧ページ作成中！
+<body>
+  <div class="main posts-index">
+    <div class="card-content">
+      <div class="container">
+        <% @posts.each do |post| %>
+          <div class="posts-index-item">
+            <div class="posts-index-content">
+              <p><%= post.content %></p>
+            </div>
+            <div class="card-link">
+              <div class="more_list">
+                <a href><%= link_to '詳細', post_path(post.id) %></a>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
-</div>
+</body>
