--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,14 @@
+<header>
+  <div class="header-logo">
+    <a href="/">WeedApp</a>
+  </div>
+  <ul class="header-menus">
+    <li>
+      <a href="/about">WeedAppとは</a>
+    </li>
+  </ul>
+</header>
+
 <div class="post_contents">
   <div class="new_container">
     <%= form_with(model: @post) do |f| %>
