--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,9 +3,7 @@
     <h3>
       編集する
     </h3>
-    <textarea cols="30" name="content" placeholder="text" rows="10">
-    <%= @post.content %>
-    </textarea>
+    <textarea cols="30" name="content" placeholder="変更したい投稿内容を入力" rows="10"><%= @post.content %></textarea>
     <input type="submit" value="SENT">
   <% end %>
 </div>
