--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
   </div>
   <ul class="header-menus">
     <li>
-      <a href="/about">WeedAppとは</a>
+      <a href="/posts/new">投稿</a>
     </li>
   </ul>
 </header>
