--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -39,29 +39,29 @@ form input[type="submit"] {
 }
 
 /* 共通レイアウト ================================ */
-body {
-  color: #2d3133;
-  background-color: #3ecdc6;
-  margin: 0;
-  min-height: 1vh;
-}
+// body {
+//   color: #2d3133;
+//   background-color: #3ecdc6;
+//   margin: 0;
+//   min-height: 80%;
+// }
 
-.main {
-  position: absolute;
-  top: 64px;
-  width: 100%;
-  height: auto;
-  min-height: 100%;
-  background-color: #f5f8fa;
-}
+// .main {
+//   position: absolute;
+//   top: 64px;
+//   width: 100%;
+//   height: auto;
+//   min-height: 100%;
+//   background-color: #f5f8fa;
+// }
 
-.container {
-  max-width: 600px;
-  margin: 60px auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  clear: both;
-}
+// .container {
+//   max-width: 600px;
+//   margin: 60px auto;
+//   padding-left: 15px;
+//   padding-right: 15px;
+//   clear: both;
+// }
 
 /* ヘッダー ================================ */
 header {
