--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,11 +19,16 @@
 
     <div class="form-group">
       <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, autocomplete: 'current-password', class: 'form-control' %>
+      <%= f.password_field :password, autocomplete: 'current-password',
+                                      class: 'form-control',
+                                      required: true,
+                                      minlength: @minimum_password_length,
+                                      maxlength: '30'
+      %>
     </div>
 
     <div class="form-group">
-      <%= f.submit t('.sign_up'), class: 'btn btn-primary' %>
+      <%= f.submit t('.sign_up'), class: 'btn btn-primary btn-block' %>
     </div>
   <% end %>
 
