--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,11 @@
 <div class="container-login">
   <h1>アカウント編集</h1>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-    <%= bootstrap_devise_error_messages! %>
+
+    <div class="form-group">
+      <%= f.label :name %> <em>(6 characters maximum)</em><br />
+      <%= f.text_field :name, autofocus: true, maxlength: "8", autocomplete: 'name', class: 'form-control' %>
+    </div>
 
     <div class="form-group">
       <%= f.label :email %>
@@ -11,7 +15,6 @@
     <div class="form-group">
       <%= f.label :password %>
       <%= f.password_field :password, autocomplete: 'new-password', class: 'form-control' %>
-
       <small class="form-text text-muted"><%= t('.leave_blank_if_you_don_t_want_to_change_it') %></small>
     </div>
 
