--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,11 @@
 <div class="container-login">
   <h1><%= t('.sign_up') %></h1>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= bootstrap_devise_error_messages! %>
+
+    <div class="form-group">
+      <%= f.label :name %> <em>(6 characters maximum)</em><br />
+      <%= f.text_field :name, autofocus: true, maxlength: "8", autocomplete: 'name', class: 'form-control' %>
+    </div>
 
     <div class="form-group">
       <%= f.label :email %>
@@ -23,8 +27,7 @@
                                       class: 'form-control',
                                       required: true,
                                       minlength: @minimum_password_length,
-                                      maxlength: '30'
-      %>
+                                      maxlength: '30'%>
     </div>
 
     <div class="form-group">
