--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -4,6 +4,7 @@
   background-color: white;
   overflow: hidden;
   box-shadow: 0 2px 6px #c1ced7;
+  max-width: 500px;
 }
 
 .post-left img {
@@ -68,7 +69,7 @@ body {
   flex: 1;
   background-color: #eee;
   text-align: center;
-  margin-top: 65px;
+  margin-top: 30px;
 }
 
 .card {
@@ -79,6 +80,7 @@ body {
   width: 70%;
   margin: 0 auto;
   margin-top: 20px;
+  margin-bottom: 20px;
   max-width: 550px;
 }
 .card-img {
@@ -87,6 +89,8 @@ body {
   height: auto;
 }
 .card-content {
+  margin-top: 30px;
+  margin-bottom: 30px;
   padding: 20px;
 }
 .card-title {
@@ -99,6 +103,7 @@ body {
   color: #777;
   font-size: 14px;
   line-height: 1.5;
+  text-align: left
 }
 .card-link {
   text-align: center;
@@ -161,3 +166,6 @@ body {
 .h3{
   margin: 10px auto
 }
+
+
+/* posts/edit ================================ */
