--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,9 +1,37 @@
-<div class="contents row">
-  <%= form_tag("/posts/#{@post.id}", method: :patch ) do %>
-    <h3>
-      編集する
-    </h3>
-    <textarea cols="30" name="content" placeholder="変更したい投稿内容を入力" rows="10"><%= @post.content %></textarea>
-    <input type="submit" value="SENT">
-  <% end %>
+<div class="container-fluid">
+  <div class = "content">
+    <%= form_with(model: @post) do |f| %>
+
+      <h3>
+        編集する
+      </h3>
+
+      <div class="field">
+        <% if @post.image? %>
+          <div class="thumbnail">
+            <%= image_tag @post.image.url %>
+          </div>
+        <% end %><br>
+        <%= f.label :image %><br>
+        <%= f.file_field :image %>
+        <%= f.hidden_field :image_cache %>
+      </div>
+      <div class="field">
+        <!-- 既存レコード(DBに保存されている)かつ、画像が存在する場合 -->
+        <% if @post.persisted? && @post.image? %>
+          <label>
+            <%= f.check_box :remove_image %>
+              画像を削除
+          </label>
+        <% end %>
+      </div>
+
+      <textarea cols="30" name="content" placeholder="変更したい投稿内容を入力" rows="10"><%= @post.content %></textarea>
+      <input type="submit" value="変更する">
+      <button type="button" class="btn btn-success">
+        変更する
+      </button>
+      <button type="button" class="btn btn-outline-success">Success</button>
+    <% end %>
+  </div>
 </div>
