--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
       <% @posts.each do |post| %>
         <div class="posts-index-item">
           <img class="posts-index-image">
-            <%= image_tag post.image.to_s, alt: nil, id: "image", class: "image" %><br>
+            <%= image_tag post.file.to_s, alt: nil, id: "image", class: "image" %><br>
           <div class="posts-index-content">
             <p><%= post.content %></p>
           </div>
