--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -12,7 +12,7 @@
 <div class="post_contents">
   <div class="new_container">
     <%= form_with(model: @post) do |f| %>
-      <%= f.file_field :image, id: :post_img %>
+      <%= f.file_field :file, id: :post_img %>
       <%= f.text_area :text, placeholder: "投稿内容を書いて" , rows: "5" %>
       <%= f.submit 'SEND', id: 'submit-btn' %>
     <% end %>
