--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,9 @@
       <% @posts.each do |post| %>
         <div class="posts-index-item">
           <img class="posts-index-image">
-            <%= image_tag post.file.to_s, alt: nil, id: "image", class: "image" %><br>
+            <% if post.photo.attached? %>
+              <%= image_tag post.photo %>
+            <% end %>
           <div class="posts-index-content">
             <p><%= post.content %></p>
           </div>
