--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,9 @@
 <div class = "body_card">
   <div class="card">
     <img class="card-img" >
-      <%= image_tag(@post.file_url) if @post.file.present? %>
+      <% if @post.photo.attached? %>
+        <%= image_tag @post.photo %>
+      <% end %>
     <div class="card-content">
       <p class="card-text">
         <%= @post.content %>
