--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,7 +7,7 @@
       <div class="field">
         <% if @post.photo.attached? %>
           <div class="thumbnail">
-            <%= image_tag @post.photo %>
+            <%= image_tag url_for(@post.photo)%>
           </div>
         <% end %><br>
         <%= f.file_field :file %>
